# radici_rotariane_backend

./: .env.example  .gitignore  .railwayignore  Dockerfile  ENHANCEMENTS_QUICK_REFERENCE.md  ENHANCEMENT_COMPLETION.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  README_SEED_CARDS.md  SEED_CARDS_COMPLETE.md  SEED_CARDS_DOCUMENTATION.md  SEED_CARDS_EXECUTION_FLOW.md  SEED_CARDS_INDEX.md  SEED_CARDS_QUICK_START.md  SUMMARY.md  TODO.md  chat_test.html  conftest.py  db.sqlite3  docker-compose.yml  main.py  manage.py  nixpacks.toml  populate_clubs.py  populate_skills.py  pyproject.toml  pytest.ini  railpack.json  railway.json  requirements.txt  setup.sh
backend/: asgi.py  settings.py  urls.py
backend/middleware/: jwt_ws.py
chat/: CHAT_API_ENDPOINTS.md  admin.py  consumers.py  models.py  routing.py  serializers.py  signals.py  tests.py  tests_gemellaggio.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_chatparticipant_last_read_at.py  0002_chatparticipant_remove_chat_unique_direct_chat_and_more.py  0003_alter_chat_chat_type.py  0004_remove_forum_type.py  0005_messagetranslation.py  0007_alter_chat_chat_type.py  (+2 more)
chat/services/: presence.py  (+1 more)
forum/: FORUM_API_ENDPOINTS.md  admin.py  models.py  serializers.py  tests.py  utils.py  views.py
radarshot_server/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: configure_s3_bucket.py  populate_demo.py
section/: admin.py  models.py  serializers.py  structure.py  tests.py  urls.py  validators.py  views.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
(+53 files in other folders)
