[project]
name = "django-rest-template"
version = "0.1.0"
description = "Django REST API template with JWT authentication, PostgreSQL/PostGIS support, and media files management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "python-decouple>=3.8",
    "pillow>=12.0.0",
    "psycopg[binary,c]>=3.2.11",
    "dj-database-url>=2.1.0",
    "whitenoise>=6.6.0",
    "channels>=4.0.0",
    "daphne>=4.0.0",
    "channels_redis>=4.0.0",
    "django-cors-headers>=4.3.1",
    "gunicorn>=21.2.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.7.0",
    "coverage>=7.4.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "ipython>=8.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "users", "photos"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
